# some_queue

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
some_api/: Dockerfile  app.py  db.py  rabbit.py  settings.py  shemas.py
some_partner/: Dockerfile  app.py  shemas.py
some_pecker/: Dockerfile  app.py  db.py  settings.py
some_worker/: Dockerfile  app.py  db.py
